--- a/uis/exercise_window.ui
+++ b/uis/exercise_window.ui
@@ -37,8 +37,19 @@
    </item>
    <item>
     <widget class="QLabel" name="expression">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="text">
       <string>Вираз</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
